...
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up</string>
    <string name="btn_link_to_login">Already registered? login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
...
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">"Settings</string>
    <string name="leftNavi">&lt;</string>
    <string name="login_successfull">"Login Successfull!"</string>
    <string name="requires_verification">"Email not verified yet!"</string>
    <string name="logoutsuccessful">"Logged Out Succesfully!"</string>
    <string name="email_verification">"Registration Successful! Check your Email for Verification link!"</string>
    <string name="failed_email_verification">"Password too short, enter minimum 6 characters"</string>
    <string name="resetlink">"Password sent to your Email!"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
