...
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Email/username"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:id="@+id/email_login"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:background="@color/white"
                    android:layout_marginBottom="10dp"
                    android:padding="15dp"
                    android:id="@+id/password_login"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Login"
...
