<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/btn_logOut"
        android:title="Log Out"
        app:showAsAction="never">
    </item>
</menu>
